--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -11,7 +11,7 @@
         <h1>Game Menu</h1>
         <div class="menu-buttons">
             <button onclick="handleClick('Play')">Play</button>
-            <button onclick="handleClick('Leaderboards')">Leaderboard</button>
+            <button onclick="handleClick('Leaderboard')">Leaderboard</button>
             <button onclick="handleClick('Settings')">Settings</button>
             <button onclick="handleClick('Exit')">Exit</button>
         </div>
