--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -10,10 +10,10 @@
     <div class="menu-container">
         <h1>Game Menu</h1>
         <div class="menu-buttons">
-            <button onclick="handleClick('Play')">Play</button>
+            <button onclick="handleClick('Play')" class="playBtn">Play</button>
             <button onclick="handleClick('Leaderboard')">Leaderboard</button>
             <button onclick="handleClick('Settings')">Settings</button>
-            <button onclick="handleClick('Exit')">Exit</button>
+            <button onclick="handleClick('Exit')" class="exitBtn">Exit</button>
         </div>
     </div>
 
