Added temp file for data transfer

--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -15,8 +15,12 @@
             <button onclick="handleClick('Settings')">Settings</button>
             <button onclick="handleClick('Exit')" class="exitBtn">Exit</button>
         </div>
+
+        <div>
+            <span class="closebtn">Click Me</span>
+        </div>
     </div>
 
-    <script src="gamemenu.js"></script>
+    <script type="module" src="gamemenu.js"></script>
 </body>
 </html>
