Settings button is now functional

--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -10,10 +10,10 @@
     <div class="menu-container">
         <h1>Game Menu</h1>
         <div class="menu-buttons">
-            <button onclick="handleClick('Play')" class="playBtn">Play</button>
-            <button onclick="handleClick('Leaderboard')">Leaderboard</button>
-            <button onclick="handleClick('Settings')">Settings</button>
-            <button onclick="handleClick('Exit')" class="exitBtn">Exit</button>
+            <button id="playBtn" class="playBtn">Play</button>
+            <button id="leaderBtn">Leaderboard</button>
+            <button id="settingsBtn">Settings</button>
+            <button id="exitBtn" class="exitBtn">Exit</button>
         </div>
 
         <div>
@@ -21,6 +21,9 @@
         </div>
     </div>
 
-    <script type="module" src="gamemenu.js"></script>
+    <script type="module" src="gamemenu.js">
+
+    
+    </script>
 </body>
 </html>
