Created Structure for leaderboard

--- a/Leaderboard/leaderboard.html
+++ b/Leaderboard/leaderboard.html
@@ -14,29 +14,20 @@
             <thead>
                 <tr>
                     <th>Place</th>
-                    <th>Player Name</th>
                     <th>Score</th>
+                    <th>Name</th>
                     <th>Time</th>
                     <th>Date</th>
                 </tr>
             </thead>
-
-            <tr>
-                <td>1</td>
-                <td>Jöns</td>
-                <td>5000</td>
-                <td>3m 32s</td>
-                <td>2024-02-23</td>
-            </tr>
-            <tr></tr>
-                <td>1</td>
-                <td>Jöns</td>
-                <td>5000</td>
-                <td>3m 32s</td>
-                <td>2024-02-23</td>
-            </tr>
+            <tbody></tbody>
         </table>
     </div>
+
+
+    <div>
+        <span class="closebtn">Click Me</span>
+    </div>  
 
     <script type="module" src="leaderboard.js">
 
