--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="gamemenu.css">
 </head>
 <body>
+    <div>
+        <ul class="navbar">
+            <li><a href="#menu">Icon</a></li>
+            <li>Game Menu</a></li>
+            <li><a href="#exit">Exit</a></li>
+        </ul>
+    </div>
     <div class="menu-container">
-        <h1>Game Menu</h1>
         <div class="menu-buttons">
             <button id="playBtn" class="playBtn">Play</button>
             <button id="leaderBtn">Leaderboard</button>
