Added Hamburger menu to Gamemenu

--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -11,17 +11,17 @@
     <!-- Navbar -->
     <div>
         <ul class="navbar">
-            <li><a href="#menu" id="hamburger-icon">Icon</a></li>
+            <li><img id="hamburger-icon" src="burger-menu.png"></li>
             <li>Game Menu</li>
-            <li><a href="#exit">Exit</a></li>
+            <li><a id="exit-Btn">Exit</a></li>
         </ul>
     </div>
 
-    <div class="hamburger-menu">
+    <div id="hamburger-menu">
         <ul>
             <li><a href="#">Play</a></li>
             <li><a href="#">Leaderboard</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a id="gameMenu-settingsBtn" class="settingsBtn">Settings</a></li>
             <li><a href="#">Exit</a></li>
         </ul>
     </div>
