--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -13,7 +13,7 @@
         <ul class="navbar">
             <li><img id="hamburger-icon" src="burger-menu.png"></li>
             <li>Game Menu</li>
-            <li><a id="exit-Btn">Exit</a></li>
+            <li><img id="exit-Icon" src="exit.png"></li>
         </ul>
     </div>
 
@@ -22,7 +22,7 @@
             <li><a href="#">Play</a></li>
             <li><a href="#">Leaderboard</a></li>
             <li><a id="gameMenu-settingsBtn" class="settingsBtn">Settings</a></li>
-            <li><a href="#">Exit</a></li>
+            <li><a id="hamburger-exit"><img id="exit-Icon" src="exit.png">Exit</a></li>
         </ul>
     </div>
 
