Updated UI + Added Icons

--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -18,10 +18,10 @@
 
     <div id="hamburger-menu">
         <ul>
-            <li><a href="#">Play</a></li>
-            <li><a id="gameMenu-leaderboardBtn">Leaderboard</a></li>
-            <li><a id="gameMenu-settingsBtn" class="settingsBtn">Settings</a></li>
-            <li><a id="hamburger-exit"><img id="exit-Icon" src="exit.png">Exit</a></li>
+            <li><a class="menu-Icon" id="gameMenu-playBtn">Play<img src="arrow.png" id="hamburger-play"></a></li>
+            <li><a class="menu-Icon" id="gameMenu-leaderboardBtn"><img src="leaderboard.png" id="hamburger-leaderboard">Leaderboard</a></li>
+            <li><a class="menu-Icon" id="gameMenu-settingsBtn"><img src="settings.png" id="hamburger-settings">Settings</a></li>
+            <li><a class="menu-Icon" id="gameMenu-exitBtn"><img src="exit.png" id="hamburger-exit">Exit</a></li>
         </ul>
     </div>
 
@@ -39,7 +39,7 @@
     <div id="settingsMenu-container" class="settings-container" style="display:none;">
         <h1>Settings</h1>
         <h2>Game Difficulty</h2>
-        <div class="settings-buttons">
+        <div id="settings-buttons">
             <button id="settings-easyBtn">Easy</button>
             <button id="settings-mediumBtn">Medium</button>
             <button id="settings-hardBtn">Hard</button>
