--- a/Login Menu/index.html
+++ b/Login Menu/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta name="Author" content="R">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="Author" content="R" />
     <title>Login Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <h1>Welcome To Memory Game</h1>
-        <h2>Sign in to your account using your Username and Password, <em>Have a Greate Game!</em></h2>
-        <form action="http://127.0.0.1:5501/index.html" method="get">
-            <p>
-                <label for="UserName">Username</label>
-                <input type="text" name="UserName" id="UserName" autocomplete="on" placeholder="xxxxxx" required>
-            </p>
-            <p>
-                <label for="PassWord">Password</label>
-                <input type="password" name="PassWord" id="PassWord" autocomplete="on" placeholder="xxxxxx" required>
-            </p>
-            <p>
-                <button type="submit">Login</button>
-            </p>
-        </form>
+      <h1>Welcome To Memory Game</h1>
+      <h2>
+        Sign in to your account using your Username and Password,
+        <em>Have a Greate Game!</em>
+      </h2>
+      <form action="http://127.0.0.1:5501/index.html" method="get">
+        <p>
+          <label for="UserName">Username</label>
+          <input
+            type="text"
+            name="UserName"
+            id="UserName"
+            autocomplete="on"
+            placeholder="xxxxxx"
+            required
+          />
+        </p>
+        <p>
+          <label for="PassWord">Password</label>
+          <input
+            type="password"
+            name="PassWord"
+            id="PassWord"
+            autocomplete="on"
+            placeholder="xxxxxx"
+            required
+          />
+        </p>
+        <p>
+          <a href="gamemenu.html">
+            <button type="submit">Login</button>
+          </a>
+        </p>
+      </form>
     </div>
-</body>
-
+  </body>
 </html>
