--- a/Login Menu/index.html
+++ b/Login Menu/index.html
@@ -38,7 +38,7 @@
           />
         </p>
         <p>
-          <a href="gamemenu.html">
+          <a href="Gamemenu\gamemenu.html">
             <button type="submit">Login</button>
           </a>
         </p>
