update button href script source

--- a/Login Menu/index.html
+++ b/Login Menu/index.html
@@ -5,15 +5,16 @@
     <meta name="Author" content="R" />
     <title>Login Page</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="login.js" defer></script>
   </head>
 
   <body>
     <div class="container">
       <h1>Welcome To Memory Game</h1>
-      <h2>
+      <p>
         Sign in to your account using your Username and Password,
         <em>Have a Greate Game!</em>
-      </h2>
+      </p>
       <form action="http://127.0.0.1:5501/index.html" method="get">
         <p>
           <label for="UserName">Username</label>
@@ -38,8 +39,8 @@
           />
         </p>
         <p>
-          <a href="Gamemenu\gamemenu.html">
-            <button type="submit">Login</button>
+          <a href="../gamemenu/gamemenu.html">
+            <button type="button">Login</button>
           </a>
         </p>
       </form>
