updated form id

--- a/Login Menu/index.html
+++ b/Login Menu/index.html
@@ -15,25 +15,24 @@
         Sign in to your account using your Username and Password,
         <em>Have a Greate Game!</em>
       </p>
-      <form action="http://127.0.0.1:5501/index.html" method="get">
+      <form id="loginForm">
         <p>
           <label for="UserName">Username</label>
           <input
             type="text"
-            name="UserName"
-            id="UserName"
+            name="userName"
+            id="userName"
             autocomplete="on"
-            placeholder="xxxxxx"
+            placeholder="Enter Username"
             required
           />
         </p>
         <p>
-          <label for="PassWord">Password</label>
+          <label for="password">Password</label>
           <input
             type="password"
             name="PassWord"
-            id="PassWord"
-            autocomplete="on"
+            id="passWord"
             placeholder="xxxxxx"
             required
           />
