Created Assets folder and updated paths

--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -10,18 +10,18 @@
     <!-- Navbar -->
     <div>
         <ul class="navbar">
-            <li><img id="hamburger-icon" src="burger-menu.png"></li>
+            <li><img id="hamburger-icon" src="./assets/burger-menu.png"></li>
             <li>Game Menu</li>
-            <li><img id="exit-Icon" src="exit.png"></li>
+            <li><img id="exit-Icon" src="./assets/exit.png"></li>
         </ul>
     </div>
     <!-- Hamburger Menu-->
     <div id="hamburger-menu">
         <ul>
-            <li><a class="menu-Icon" id="gameMenu-playBtn">Play<img src="arrow.png" id="hamburger-play"></a></li>
-            <li><a class="menu-Icon" id="gameMenu-leaderboardBtn"><img src="leaderboard.png" id="hamburger-leaderboard">Leaderboard</a></li>
-            <li><a class="menu-Icon" id="gameMenu-settingsBtn"><img src="settings.png" id="hamburger-settings">Settings</a></li>
-            <li><a class="menu-Icon" id="gameMenu-exitBtn"><img src="exit.png" id="hamburger-exit">Exit</a></li>
+            <li><a class="menu-Icon" id="gameMenu-playBtn">Play<img src="./assets/arrow.png" id="hamburger-play"></a></li>
+            <li><a class="menu-Icon" id="gameMenu-leaderboardBtn"><img src="./assets/leaderboard.png" id="hamburger-leaderboard">Leaderboard</a></li>
+            <li><a class="menu-Icon" id="gameMenu-settingsBtn"><img src="./assets/settings.png" id="hamburger-settings">Settings</a></li>
+            <li><a class="menu-Icon" id="gameMenu-exitBtn"><img src="./assets/exit.png" id="hamburger-exit">Exit</a></li>
         </ul>
     </div>
 
