påbörjat css, html för gameboard

--- a/Gameboard/gameboard.html
+++ b/Gameboard/gameboard.html
@@ -8,6 +8,7 @@
     <script src="gameboard.js" defer></script>
     <body>
       <h1>Memory Game</h1>
+      <div id="game-board" class="board"></div>
     </body>
   </head>
 </html>
