--- a/Gameboard/gameboard.html
+++ b/Gameboard/gameboard.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <script src="gameboard.js" defer></script>
     <body>
+      <div class="sidenav">
+        <a href="#">Main Menu</a>
+        <a href="#">Reset</a>
+      </div>
       <h1>Memory Game</h1>
       <div id="game-board" class="board"></div>
     </body>
