ändrat buttons för navigering i sidebar

--- a/Gameboard/gameboard.html
+++ b/Gameboard/gameboard.html
@@ -8,8 +8,8 @@
     <script src="gameboard.js" defer></script>
     <body>
       <div class="sidenav">
-        <a href="#">Main Menu</a>
-        <a href="#">Reset</a>
+        <button id="main-menu">Main Menu</button>
+        <button id="reset">Reset</button>
       </div>
       <h1>Memory Game</h1>
       <div id="game-board" class="board"></div>
