--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -48,17 +48,18 @@
       </ul>
     </div>
     <!-- Game Section-->
-    <button id="reset">Reset</button>
-    <div id="game-board" class="board">
-      
+    <div id="game-container">
+      <button id="reset">Reset</button>
+      <div id="game-board" class="board">
+        
+      </div>
     </div>
 
     <!-- Game Menu Section -->
     <!--
     <div
      id="gameMenu-container" 
-     class="menu-container"
-     style="display: none">
+     class="menu-container">
       <div class="gameMenu-buttons">
         <button id="gameMenu-playBtn" class="playBtn">Play</button>
         <button id="gameMenu-leaderBtn">Leaderboard</button>
