--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -10,13 +10,13 @@
     <!-- Navbar -->
     <div>
       <ul class="navbar">
-        <li><img id="hamburger-icon" src="./assets/burger-menu.png" alt="Hamburger Menu"></li>
+        <li><img id="hamburger-icon" src="./assets/burger-menu.png" alt="Hamburger Menu" style="display: none;"></li>
         <li>Game Menu</li>
         <li><img id="exit-Icon" src="./assets/exit.png" alt="Exit"></li>
       </ul>
     </div>
     <!-- Hamburger Menu-->
-    <div id="hamburger-menu">
+    <div id="hamburger-menu" style="display: none;">
       <ul>
         <li>
           <a class="menu-Icon" id="gameMenu-playBtn"
