Patched Exit Buttons

--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -12,7 +12,7 @@
       <ul class="navbar">
         <li><img id="hamburger-icon" src="./assets/burger-menu.png" alt="Hamburger Menu" style="display: none;"></li>
         <li>Game Menu</li>
-        <li><img id="exit-Icon" src="./assets/exit.png" alt="Exit"></li>
+        <li><img class="gameMenu-exitBtn" src="./assets/exit.png" alt="Exit"></li>
       </ul>
     </div>
     <!-- Hamburger Menu-->
@@ -41,7 +41,7 @@
           >
         </li>
         <li>
-          <a class="menu-Icon" id="gameMenu-exitBtn"
+          <a class="menu-Icon gameMenu-exitBtn"
             ><img src="./assets/exit.png" id="hamburger-exit" alt="">Exit</a
           >
         </li>
