--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -47,7 +47,7 @@
         </li>
       </ul>
     </div>
-
+    <!-- Login Section -->
     <div id="login-container">
       <h1>Welcome To Memory Game</h1>
       <p>
@@ -88,7 +88,7 @@
     <!-- Game Section-->
     <div id="game-container" style="display: none;">
       <button id="reset">Reset</button>
-      <div id="game-area"> <!-- New wrapper for game and players -->
+      <div id="game-area"> 
         <div id="game-board" class="board"></div>
         <div id="players">
             <p id="player1">Player 1</p>
@@ -117,7 +117,7 @@
       <button id="settings-timerBtn">Off</button>
     </div>
 
-    <!-- Leaderboard Menu Section (Initially Hidden) -->
+    <!-- Leaderboard Menu Section -->
     <div
       id="leaderboard-container"
       class="leaderboard-container"
