Now able to edit Names

--- a/Gamemenu/gamemenu.html
+++ b/Gamemenu/gamemenu.html
@@ -91,6 +91,8 @@
       <div id="game-area"> 
         <div id="game-board" class="board"></div>
         <div id="players">
+          <div id="editBtn"><img src="assets/edit.png">
+          </div>
             <p id="player1">Player 1</p>
             <p>Score: <span id="player1-score">0</span></p>
             <p>Time: <span id="player1-timer">0m 00s</span></p>
